--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,8 @@
                     <br>
                     Reposting of any article shall be premitted unless otherwise claimed.
                     <br>
+                    除非另有说明,转载本站任何文章均需征得同意.
+                    <br>
                     Framework based on <a href="https://github.com/Huxpro/huxpro.github.io">Huxpro</a>.
                 </p>
             </div>
