--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,9 +9,9 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.ownername }} {{ site.time | date: '%Y' }}
                     <br>
-                    Reposting of any article shall be premitted unless otherwise claimed.
+                    Reposting of any article shall be premitted by the author unless otherwise claimed.
                     <br>
-                    除非另有说明,转载本站任何文章均需征得同意.
+                    除非另有说明,转载本站任何文章均需征得作者同意.
                     <br>
                     Framework based on <a href="https://github.com/Huxpro/huxpro.github.io">Huxpro</a>.
                 </p>
