--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -1,20 +1,18 @@
-<script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_SVG">
+<script 
+    id="MathJax-script" 
+    async
+    src="/js/mathjax/tex-svg.js"
+>
 </script>
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-    TeX: {
-      equationNumbers: {
-        autoNumber: "AMS"
-      }
-    },
-    SVG: {
-      scale: 90
-    },
-    tex2jax: {
-      inlineMath: [ ['$','$'] ],
-      displayMath: [ ['$$','$$'] ],
-      processEscapes: true,
-    }
-  });
+<script type="text/javascript">
+    MathJax = ({
+        tex: {
+            inlineMath: [ ['$','$'] ],
+            displayMath: [ ['$$','$$'], ['\[','\]'] ],
+            processEscapes: true
+        },
+        svg: {
+            fontCache: 'global'
+        }
+    });
 </script>
