--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -1,4 +1,4 @@
-<script 
+<!-- <script 
     id="MathJax-script" 
     async
     src="/js/mathjax/tex-svg.js"
@@ -13,6 +13,32 @@
         },
         svg: {
             fontCache: 'global'
+        },
+        tex2jax: {
+        inlineMath: [ ['$','$'] ],
+        displayMath: [ ['$$','$$'] ],
+        processEscapes: true,
         }
     });
+</script> -->
+
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_SVG">
+</script>
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    TeX: {
+      equationNumbers: {
+        autoNumber: "AMS"
+      }
+    },
+    SVG: {
+      scale: 90
+    },
+    tex2jax: {
+      inlineMath: [ ['$','$'] ],
+      displayMath: [ ['$$','$$'] ],
+      processEscapes: true,
+    }
+  });
 </script>
