Changes footer, adds email link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,9 +11,9 @@
                     <br>
                     Reposting of any article shall be premitted by the author unless otherwise claimed.
                     <br>
-                    除非另有说明,转载本站任何文章均需征得作者同意.
+                    除非另有声明,转载本站任何文章均需征得作者同意.
                     <br>
-                    Framework based on <a href="https://github.com/Huxpro/huxpro.github.io">Huxpro</a>.
+                    Contact: <a href="mailto:admin@yuxuanzhang.net">admin@yuxuanzhang.net</a>
                 </p>
             </div>
         </div>
