--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -1,27 +1,40 @@
-<!-- <script 
-    id="MathJax-script" 
-    async
-    src="/js/mathjax/tex-svg.js"
->
+<script>
+  MathJax = {
+  tex: {
+    packages: ['base'],        // extensions to use
+    inlineMath: [              // start/end delimiter pairs for in-line math
+      ['$', '$']
+    ],
+    displayMath: [             // start/end delimiter pairs for display math
+      ['$$', '$$'],
+      ['\\[', '\\]']
+    ],
+    processEscapes: true,      // use \$ to produce a literal dollar sign
+    processEnvironments: true, // process \begin{xxx}...\end{xxx} outside math mode
+    processRefs: true,         // process \ref{...} outside of math mode
+    // digits: /^(?:[0-9]+(?:\{,\}[0-9]{3})*(?:\.[0-9]*)?|\.[0-9]+)/,
+    //                            // pattern for recognizing numbers
+    // tags: 'none',              // or 'ams' or 'all'
+    // tagSide: 'right',          // side for \tag macros
+    // tagIndent: '0.8em',        // amount to indent tags
+    useLabelIds: true,         // use label name rather than tag for ids
+    multlineWidth: '85%',      // width of multline environment
+    // maxMacros: 1000,           // maximum number of macro substitutions per expression
+    // maxBuffer: 5 * 1024,       // maximum size for the internal TeX string (5K)
+    // baseURL:                   // URL for use with links to tags (when there is a <base> tag in effect)
+    //    (document.getElementsByTagName('base').length === 0) ? '' : String(document.location).replace(/#.*$/, '')
+  },
+  svg: {
+    fontCache: 'global'
+  }
+};
 </script>
-<script type="text/javascript">
-    MathJax = ({
-        tex: {
-            inlineMath: [ ['$','$'] ],
-            displayMath: [ ['$$','$$'], ['\[','\]'] ],
-            processEscapes: true
-        },
-        svg: {
-            fontCache: 'global'
-        },
-        tex2jax: {
-        inlineMath: [ ['$','$'] ],
-        displayMath: [ ['$$','$$'] ],
-        processEscapes: true,
-        }
-    });
-</script> -->
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+</script>
 
+
+<!-- <script src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX_SVG"></script>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
     extensions: ["tex2jax.js"],
@@ -33,8 +46,10 @@
     },
     "HTML-CSS": { availableFonts: ["TeX"] }
   });
-</script>
-<script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js"></script>
+</script> -->
+
+
+<!-- <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js"></script> -->
 <!-- <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_SVG">
 </script> -->
